--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,13 +20,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to "Home", root_path, class: 'navbar-brand' %>
+      <%= link_to "Hoooooooooome", root_path, class: 'navbar-brand' %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Tweet", new_tweet_path %></li>
+        <li><%= link_to "Tweeeeeeeeeeet", new_tweet_path %></li>
         </li>
       </ul>
     </div><!-- /.navbar-collapse -->
